# find

./: Cargo.toml  LICENSE  README.md  i
.github/workflows/: release.yml
src/: config.rs  frecency.rs  index.rs  main.rs  search.rs  ui.rs
