[package]
name = "f"
version = "0.0.0"
edition = "2021"
description = "instant directory jumper"
license = "MIT"
repository = "https://github.com/crush/find"

[[bin]]
name = "f"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
inquire = "0.7"
jwalk = "0.8"
nucleo-matcher = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
