[package]
name = "f"
version = "0.5.0"
edition = "2021"
description = "instant directory jumper"
license = "MIT"
repository = "https://github.com/crush/find"

[[bin]]
name = "f"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.28"
dirs = "6"
ignore = "0.4"
mimalloc = { version = "0.1", default-features = false }
nucleo-matcher = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
assert_cmd = "2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
